k8s/socialshare-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: socialshare-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: socialshare
    spec:
      containers:
        - name: socialshare
          image: socialshare:release
          ports:
            - containerPort: 8000
          args: ["foreground"]
